# character_counter

./: Cargo.toml  README.md
src/: io_handler.rs  main.rs
